--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>BrotExperte.de</title>
 
-    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-grid.css">
     <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap-reboot.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
@@ -37,7 +37,7 @@
 </div>
 
 <!-- Hero -->
-<div class="bg-dark text-white text-center py-5" style="background: url('img/brot.jpg') center/cover no-repeat;">
+<div class="bg-dark text-white text-center py-5" style="background: url('css/img/brot.jpg') center/cover no-repeat;">
     <h2 class="fw-bold">Brotlinks</h2>
     <p class="container">Lorem ipsum dolor sit amet, consectetur adipiscing elit...</p>
 </div>
@@ -144,7 +144,10 @@
 
 <!-- Footer -->
 <footer class="bg-light text-center py-3">
-    <p class="mb-0">&copy; 2015 BrotExperte.de. Alle Rechte vorbehalten.</p>
+
+    <span>2025 BrotExperte.de</span>
+    <span class="col">Alle Rechte vorbehalten</span>
+
     <a href="#" class="text-secondary small">Brotlinks</a> |
     <a href="#" class="text-secondary small">Impressum</a> |
     <a href="#" class="text-secondary small">Datenschutz</a> |
